css/style.css
/* ... */
.button-pay__link {
  text-decoration: none;
  display: block;
}
.promotion__information {
  margin-left: 7px;
}
.promotion__winner {
  font-family: "MontserratLight";
  font-size: 16px;
  letter-spacing: 0.04em;
  color: #fefefe;
  margin-bottom: 16px;
}
.promotion__result-date {
  font-family: "MontserratBold";
  font-size: 25px;
  letter-spacing: 0.04em;
  color: #fefefe;
}
.attributes {
  width: 100%;
  min-width: 375px;
  height: 166px;
  position: relative;
}
.balls {
  width: 157px;
  height: 166px;
  position: absolute;
  left:-48px;
}
.ball-top {
  width: 98px;
  height: 98px;
  background-image: linear-gradient(to top, #b96b12 0%, #e9953b 49%, #ffbb50 100%);
  border-radius: 50%;
  position: absolute;
  top: 0px;
  left: 0px;
  box-shadow: 0px 2px 5px 2px rgba(0,0,0,0.22);
}
.ball-middle {
  align-self: center;
  justify-content: center;
  width: 28px;
  height: 28px;
  background-image: linear-gradient(to top, #b96b12 0%, #e9953b 49%, #ffbb50 100%);
  border-radius: 50%;
  position: absolute;
  left:78px;
  top: 107px;
  box-shadow: 0px 2px 2px 1px rgba(0,0,0,0.22);
}
.ball-bottom {
  align-self: flex-end;
  justify-content: flex-end;
  width: 18px;
  height: 18px;
  background-image: linear-gradient(to top, #b96b12 0%, #e9953b 49%, #ffbb50 100%);
  border-radius: 50%;
  position: absolute;
  left:105px;
  top: 146px;
  box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.22);
}
.box {
  background-image: url('../img/box.png');
  width: 207px;
  height: 429px;
  position: absolute;
  right: 0px;
  top: -170px;
}
.advertising {
  flex-direction: column;
  text-align: right;
  min-width: 375px;
  margin-top: 80px;
}
.advertising__title, .advertising__title-tablet, .advertising__title-desktop {
  align-self: flex-start;
  font-family: "MontserratLight";
  font-size: 18px;
  line-height: 1.488;
  letter-spacing: 0.04em;
  font-variant: small-caps;
  color: #fefefe;
  margin-left: 47px;
}
.advertising__title-tablet, .advertising__title-desktop {
  display: none;
}
.advertising__card {
  margin: 67px 0px 46px 0px;
}
.advertising-image {
    width: 375px;
    height: 147px;
  }
.advertising__button {
  align-self: center;
  width: 239px;
  height: 46px;
  font-size: 13px;
  font-family: "MontserratBold";
  color: #072f78;
  text-transform: uppercase;
  line-height: 46px;
  text-align: center;
  letter-spacing: 0.04em;
  background-image: -moz-linear-gradient( -90deg, rgb(255,187,80) 0%, rgb(233,149,59) 100%);
  background-image: -webkit-linear-gradient( -90deg, rgb(255,187,80) 0%, rgb(233,149,59) 100%);
  background-image: -ms-linear-gradient( -90deg, rgb(255,187,80) 0%, rgb(233,149,59) 100%);
  box-shadow: 0px 6px 11.16px 0.84px rgba(0, 0, 0, 0.25);
  border-radius: 30px;
  cursor: pointer;
  margin-bottom: 36px;
}
.advertising__link {
  display: block;
  text-decoration: none;
}
.ellipses__bottom {
  flex-direction: column;
  align-items: center;
  overflow: hidden;
}
.ellipse__top {
  height: 23px;
  width: 23px;
  margin-bottom: 18px;
  box-shadow: -0.5px 1px 4px 1px rgba(0,0,0,0.35);
}
.ellipse__bottom {
  height: 54px;
  width: 53px;
  box-shadow: -0.5px 1px 4px 1px rgba(0,0,0,0.35);
  margin-bottom: -14px;
}
.official-terms {
  display: none;
}
.button-pay:hover {
  background-image: -moz-linear-gradient( -90deg, #ffd49a 0%, #ffdeb2 100%);
  background-image: -webkit-linear-gradient( -90deg, #ffd49a 0%, #ffdeb2 100%);
  background-image: -ms-linear-gradient( -90deg, #ffd49a 0%, #ffdeb2 100%);
  box-shadow: 0px 6px 11.16px 2px rgba(0, 0, 0, 0.5);
  transition: 2s;
}
.advertising__button:hover {
  background-image: -moz-linear-gradient( -90deg, #ffd49a 0%, #ffdeb2 100%);
  background-image: -webkit-linear-gradient( -90deg, #ffd49a 0%, #ffdeb2 100%);
  background-image: -ms-linear-gradient( -90deg, #ffd49a 0%, #ffdeb2 100%);
  box-shadow: 0px 6px 11.16px 2px rgba(0, 0, 0, 0.5);
  transition: 2s;
}
.button-pay__link {
  color: #072f78;
}
.advertising__link:visited {
  color: #072f78;
}
.button-pay__link:hover {
  color: #ffffff;
}
.advertising__link:hover {
  color: #ffffff;
}
.official-terms__link:hover{
  font-size: 24px;
  transform: scale(1.05, 1.05);
  transition: 1s;
  border-bottom: 1px solid rgb(194, 163, 31);
  color: rgb(194, 163, 31);
  text-shadow: 0px -2px 11px rgb(194, 163, 31);
  font-weight: bold;
  transition: 1s;
}
.official-terms__link:visited{
  color: #000000;
  border-bottom: 1px solid #000000;
}
.footer {
  justify-content: space-around;
  flex-wrap: nowrap;
}
.partners, .secure {
  display: none;
}
.footer {
  justify-content: space-around;
  flex-wrap: nowrap;
}
.footer {
  width: 100%;
  height: 140px;
  background: #252525;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  flex-wrap: nowrap;
}
.secure {
  justify-content: center;
}
.visa {
  width: 119px;
  height: 66px;
  background-image: url('../img/visa_master.png');
  background-position: 0px 0px;
  margin: 0px 5px;
}
.master-card {
  width: 131px;
  height: 66px;
  background-image: url('../img/visa_master.png');
  background-position: -149px 0px;
  margin: 0px 5px;
}
.footer-information {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 375px;
}
.menu {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: baseline;
  align-content:flex-start;
  font-size: 13px;
  font-family: "MontserratBold";
  color: #ffffff;
  min-width: 312px;
  margin-top: 4px;
}
.menu__link {
  display: block;
  font-size: 11px;
  height: 20px;
  line-height: 20px;
  font-family: "MontserratLight";
  color: #ffffff;
  text-decoration: none;
  margin: 0px 5px;
}
.menu__link:hover {
  color: #fcb658;
  text-decoration: underline;
}
.copyright, .conpany {
  font-size: 13px;
  font-family: "MontserratLight";
  color: #808080;
  line-height: 1.2;
}
.geo-trust {
  width: 206px;
  height: 60px;
  background-image: url('../img/geoTrast_sysNet.png');
  background-position: 0px 0px;
  margin: 0px 5px;
}
/* ... */

